--- a/slider.html
+++ b/slider.html
@@ -27,7 +27,7 @@
         <!-- include Cycle plugin -->
         <script type="text/javascript" src="http://cloud.github.com/downloads/malsup/cycle/jquery.cycle.all.latest.js"></script>
 		<!-- include jCarousel lite plugin -->
-        <script type="text/javascript" src="http://www.antimath.info/demos/cycle-carousel/plugins.js"></script>
+        <script type="text/javascript" src="jcarousel.js"></script>
         
     </head>
     <body>
