--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
 			
         </style>
         <!-- include jQuery library -->
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+        <script type="text/javascript" src="./js/jquery_v1.3.2.js"></script>
         <!-- include Cycle plugin -->
-        <script type="text/javascript" src="http://cloud.github.com/downloads/malsup/cycle/jquery.cycle.all.latest.js"></script>
+        <script type="text/javascript" src="./js/jquery.cycle.all.js"></script>
 		<!-- include jCarousel lite plugin -->
-        <script type="text/javascript" src="jcarousel.js"></script>
+        <script type="text/javascript" src="./js/jcarousel.js"></script>
         
     </head>
     <body>
 <div id="slideshow-wrapper">
 	<ul id="slideshow">
-		<li><img src="http://lorempixel.com/400/300/sports/1/" width="400" height="300" /></li>
-		<li><img src="http://lorempixel.com/400/300/sports/2/" width="400" height="300" /></li>
-		<li><img src="http://lorempixel.com/400/300/sports/3/" width="400" height="300" /></li>
-		<li><img src="http://lorempixel.com/400/300/sports/4/" width="400" height="300" /></li>
-		<li><img src="http://lorempixel.com/400/300/sports/5/" width="400" height="300" /></li>
-		<li><img src="http://lorempixel.com/400/300/sports/6/" width="400" height="300" /></li>
+		<li><img src="https://placehold.co/400x300" width="400" height="300" /></li>
+		<li><img src="https://placehold.co/400x300" width="400" height="300" /></li>
+		<li><img src="https://placehold.co/400x300" width="400" height="300" /></li>
+		<li><img src="https://placehold.co/400x300" width="400" height="300" /></li>
+		<li><img src="https://placehold.co/400x300" width="400" height="300" /></li>
+		<li><img src="https://placehold.co/400x300" width="400" height="300" /></li>
 	</ul>
 	<div id="slideshow-controls">
 		<a href="#" id="prev">&lt; Prev</a>
@@ -49,12 +49,12 @@
 	<button id="slide-pager_prev">&lt;&lt;</button>
 	<div id="slide-pager">
 		<ul>
-			<li><a href="#"><img src="http://lorempixel.com/100/80/sports/1/" width="100" height="80" alt="" /></a></li>
-			<li><a href="#"><img src="http://lorempixel.com/100/80/sports/2/" width="100" height="80" alt="" /></a></li>
-			<li><a href="#"><img src="http://lorempixel.com/100/80/sports/3/" width="100" height="80" alt="" /></a></li>
-			<li><a href="#"><img src="http://lorempixel.com/100/80/sports/4/" width="100" height="80" alt="" /></a></li>
-			<li><a href="#"><img src="http://lorempixel.com/100/80/sports/5/" width="100" height="80" alt="" /></a></li>
-			<li><a href="#"><img src="http://lorempixel.com/100/80/sports/6/" width="100" height="80" alt="" /></a></li>
+			<li><a href="#"><img src="https://placehold.co/100x80" width="100" height="80" alt="" /></a></li>
+			<li><a href="#"><img src="https://placehold.co/100x80" width="100" height="80" alt="" /></a></li>
+			<li><a href="#"><img src="https://placehold.co/100x80" width="100" height="80" alt="" /></a></li>
+			<li><a href="#"><img src="https://placehold.co/100x80" width="100" height="80" alt="" /></a></li>
+			<li><a href="#"><img src="https://placehold.co/100x80" width="100" height="80" alt="" /></a></li>
+			<li><a href="#"><img src="https://placehold.co/100x80" width="100" height="80" alt="" /></a></li>
 		</ul>
 	</div>
 	<button id="slide-pager_next">&gt;&gt;</button>
